// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for active: false, direction: asc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
.button-root {
  display: flex;
  align-items: flex-end;
}
@media(hover:hover) {
  .button-pure:hover .icon, .button-pure:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  opacity: 0;
  transform: rotate3d(0,0,1,0deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() should return correct css for active: false, direction: desc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
.button-root {
  display: flex;
  align-items: flex-end;
}
@media(hover:hover) {
  .button-pure:hover .icon, .button-pure:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  opacity: 0;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() should return correct css for active: true, direction: asc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
.button-root {
  display: flex;
  align-items: flex-end;
}
@media(hover:hover) {
  .button-pure:hover .icon, .button-pure:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  opacity: 1;
  transform: rotate3d(0,0,1,0deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() should return correct css for active: true, direction: desc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
.button-root {
  display: flex;
  align-items: flex-end;
}
@media(hover:hover) {
  .button-pure:hover .icon, .button-pure:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  opacity: 1;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() should return correct css for active: true, direction: desc, hideLabel: false and multiline: true 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: normal !important;
}
:host([hidden]) {
  display: none !important;
}
.button-root {
  display: flex;
  align-items: flex-end;
}
@media(hover:hover) {
  .button-pure:hover .icon, .button-pure:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  opacity: 1;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() should return correct css for active: undefined, direction: undefined, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for active: undefined, direction: undefined, hideLabel: true and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  display: block;
}"
`;
